# somewords

./: .gitignore  Cargo.toml  footer.md  readme.md
.github/workflows/: build.yaml
src/: index.css  main.rs
templates/: index.css  page.html  redirect.html
