[package]
name = "unblog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.0"
chrono = "0.4.26"
clap = { version = "4.3.2", features = ["derive"] }
gix = "0.44.1"
loga = "0.1.3"
pulldown-cmark = "0.9.3"
